# zed

./: .gitignore  .goreleaser.yaml  .linkspector.yml  .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  Makefile  complex.go  complex_test.go  context.go  context_test.go  go.mod  go.sum  primitive.go  recordbuilder.go  spq_test.go  type.go  value.go  walk.go
api/: api.go  mime.go
book/: Makefile  book.toml
compiler/: compiler.go  package.go
csup/: any.go  array.go  bool.go  bytes.go  const.go  context.go  csup_test.go  dict.go  dynamic.go  encoder.go  enum.go  field.go  float.go  fusedtype.go  fusion.go  header.go  int.go  ip.go  map.go  metadata.go  named.go  net.go  none.go  null.go  object.go  object_test.go  record.go  scode.go  type.go  union.go  union_test.go  writer.go
db/: branch.go  pool.go  writer.go
fuzz/: fuzz.go
mdtest/: mdtest.go  test.go
order/: direction.go  which.go
python/superdb/: README.md  pyproject.toml  superdb.py  test_auth.py  test_superdb.py
python/superdb/ztests/: pytest-auth.yaml  pytest.yaml
runtime/: compiler.go
sbuf/: file.go  materialize.go  mux.go  scanner.go
service/: core.go  eventstream.go  handlers.go  handlers_test.go  request.go
sio/: peeker_test.go  sup_test.go  zio.go
sup/: analyzer.go  builder.go  formatter.go  lexer.go  marshal.go  marshal_bsup_test.go  marshal_test.go  name.go  parser-types.go  parser-values.go  sup.go  sup_test.go  typeval_test.go
vector/: any.go  apply.go  bool.go  builder.go  bytes.go  const.go  debug.go  dynamic.go  empty.go  error.go  float.go  int.go  (+18 more)
(+1081 files in other folders)
